feat: global shortcuts

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,16 @@
 			<p>Track the summoners of your opponents with precision!</p>
 		</div>
 
-		<div id="app"></div>
-
-		<!-- Opponents -->
-		<section id="opponents"></section>
+		<div id="app" class="app">
+			<main class="main">
+				<!-- Form -->
+				<section id="form"></section>
+				<!-- Opponents -->
+				<section id="opponents"></section>
+			</main>
+			<!-- Shortcut config -->
+			<aside id="shortcuts" class="shortcuts"></aside>
+		</div>
 
 		<!-- <script src="controller.js" defer></script> -->
 		<script src="render.js" defer></script>
